mettre en place les premières personnalisations des textes du bloc headtext de l'ensemble des modules

--- a/src/includes/aepe/_headtext.pug
+++ b/src/includes/aepe/_headtext.pug
@@ -1,21 +1,22 @@
-//-Header Hôtellerie Texte
+//-Header Petite Enfance Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
         mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans l'Hôtellerie-Restauration&nbsp;!
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? 
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un #[span(style="font-weight:700;color:#1a1a1a;") programme diplômant en alternance] qui vous permet de conjuguer apprentissage théorique et expérience professionnelle.
-        mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Lors de cette journée, #[span(style="font-weight:700;color:#C21718;") samedi 21 juin], vous pourrez #[span(style="font-weight:700;color:#C21718;") de 9h30 à 13h]&nbsp;:
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#C21718;") &#x25CF;] Explorer un #[span(style="font-weight:700;color:#1a1a1a;") campus moderne],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#C21718;") &#x25CF;] Échanger avec des #[span(style="font-weight:700;color:#1a1a1a;") experts] et des #[span(style="font-weight:700;color:#1a1a1a;") étudiants],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#C21718;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos #[span(style="font-weight:700;color:#1a1a1a;") formations], notamment en #[span(style="font-weight:700;color:#1a1a1a;") alternance],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#C21718;") &#x25CF;] Obtenir des réponses à vos questions sur les #[span(style="font-weight:700;color:#1a1a1a;") admissions] et la #[span(style="font-weight:700;color:#1a1a1a;") vie étudiante],
-        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#C21718;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par l'hôtellerie et la restauration.]
+        mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Lors de cette journée, #[span(style="font-weight:700;color:#2DAAE1;") samedi 21 juin], vous pourrez #[span(style="font-weight:700;color:#2DAAE1;") de 9h30 à 13h]&nbsp;:
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#2DAAE1;") &#x25CF;] Explorer un #[span(style="font-weight:700;color:#1a1a1a;") campus moderne],
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#2DAAE1;") &#x25CF;] Échanger avec des #[span(style="font-weight:700;color:#1a1a1a;") experts] et des #[span(style="font-weight:700;color:#1a1a1a;") étudiants],
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#2DAAE1;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos #[span(style="font-weight:700;color:#1a1a1a;") formations], notamment en #[span(style="font-weight:700;color:#1a1a1a;") alternance],
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#2DAAE1;") &#x25CF;] Obtenir des réponses à vos questions sur les #[span(style="font-weight:700;color:#1a1a1a;") admissions] et la #[span(style="font-weight:700;color:#1a1a1a;") vie étudiante],
+        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#2DAAE1;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par l'hôtellerie et la restauration.]
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
-            mj-text(align="right" padding="0px 10px" mj-class="T13-700 cT1") Hélène Salmon
-            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable des études
-            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Hôtellerie
+            mj-text(align="right" padding="0px 10px" mj-class="T13-700 cT1") Jérôme Poulain
+            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable pédagogique
+            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Petite Enfance
+            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Santé
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/qM5vq0xh/Jerome21062025.jpg")
