--- a/src/templates/_commerce.pug
+++ b/src/templates/_commerce.pug
@@ -29,6 +29,7 @@ mjml
             mj-class(name="cT0" color="#4d4d4d")/
             mj-class(name="cT2" color="#999999")/
             mj-class(name="cTW" color="#ffffff")/
+            mj-class(name="bgW" background-color="#ffffff")/
             //- Colors
             mj-class(name="c0" color="#EC6608")/
             mj-class(name="bg0" background-color="#EC6608")/
