--- a/src/templates/_supveto.pug
+++ b/src/templates/_supveto.pug
@@ -27,8 +27,9 @@ mjml
             //- Black colors text
             mj-class(name="cT1" color="#1a1a1a")/
             mj-class(name="cT0" color="#4d4d4d")/
-            mj-class(name="cT2" color="#999999")
+            mj-class(name="cT2" color="#999999")/
             mj-class(name="cTW" color="#ffffff")/
+            mj-class(name="bgW" background-color="#ffffff")/
             //- Colors
             mj-class(name="c0" color="#008853")/
             mj-class(name="bg0" background-color="#008853")/
