adaptation des textes aux formations des modules proposant des foramtions en alternance

--- a/src/includes/dietetique/_headtext.pug
+++ b/src/includes/dietetique/_headtext.pug
@@ -1,4 +1,4 @@
-//-Header Hôtellerie Texte
+//-Header Diététique Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
         mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans l'Hôtellerie-Restauration&nbsp;!
