--- a/src/includes/commerce/_itineraire.pug
+++ b/src/includes/commerce/_itineraire.pug
@@ -1,4 +1,4 @@
-//- Itineraire
+//- Itineraire Commerce
 mj-wrapper(background-color="#ffffff" padding="20px")
     mj-section(padding="0px")
         mj-group(width="240px")
