--- a/src/includes/supveto/_headimg.pug
+++ b/src/includes/supveto/_headimg.pug
@@ -1,4 +1,4 @@
-//-Header Supveto images
+//-Header Supveto Lille images
 mj-section(padding="20px")
     mj-column
         mj-image(padding="0" width="153px" src="https://i.ibb.co/xKH0YmJq/logosupveto.png" alt="logo Supveto Lille")/
