--- a/src/includes/tourisme/_headimg.pug
+++ b/src/includes/tourisme/_headimg.pug
@@ -1,4 +1,4 @@
-//-Header Hôtellerie images
+//-Header Tourisme images
 mj-section(padding="20px")
     mj-column
         mj-image(padding="0" width="153px" src="https://i.ibb.co/x7Dh8V0/logo-ETourisme.png" alt="logo Ecosup Tourisme")/
