--- a/src/includes/dietetique/_headtext.pug
+++ b/src/includes/dietetique/_headtext.pug
@@ -1,15 +1,15 @@
 //-Header Diététique Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
-        mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans l'Hôtellerie-Restauration&nbsp;!
+        mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans la Diététique et la Nutrition&nbsp;!
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un #[span(style="font-weight:700;color:#1a1a1a;") programme diplômant en alternance] qui vous permet de conjuguer apprentissage théorique et expérience professionnelle.
+        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un #[span(style="font-weight:700;color:#1a1a1a;") programme diplômant en formation initiale], conçu pour vous offrir un enseignement théorique appronfondi accompagné d'applications concrètes.
         mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Lors de cette journée, #[span(style="font-weight:700;color:#EC619F;") samedi 21 juin], vous pourrez #[span(style="font-weight:700;color:#EC619F;") de 9h30 à 13h]&nbsp;:
         mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Explorer un #[span(style="font-weight:700;color:#1a1a1a;") campus moderne],
         mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Échanger avec des #[span(style="font-weight:700;color:#1a1a1a;") experts] et des #[span(style="font-weight:700;color:#1a1a1a;") étudiants],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos #[span(style="font-weight:700;color:#1a1a1a;") formations], notamment en #[span(style="font-weight:700;color:#1a1a1a;") alternance],
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos #[span(style="font-weight:700;color:#1a1a1a;") formations initiales] en diététique et nutrition,
         mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#EC619F") &#x25CF;] Obtenir des réponses à vos questions sur les #[span(style="font-weight:700;color:#1a1a1a;") admissions] et la #[span(style="font-weight:700;color:#1a1a1a;") vie étudiante],
-        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par l'hôtellerie et la restauration.]
+        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#EC619F;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par ce domaine pasionnant.]
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
