--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Immobilier</mj-title>
+    <mj-title>JPO du 21 juin 2025 Supveto Lille</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -24,16 +24,16 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #EC6608" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#EC6608"></mj-button>
+      <mj-button border="2px solid #008853" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#008853"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
-      <mj-class name="cT2" color="#999999"></mj-class>
+      <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
       <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#EC6608"/>
-      <mj-class name="bg0" background-color="#EC6608"/>
-      <mj-class name="c1" color="#AA3E17"/>
-      <mj-class name="bg1" background-color="#AA3E17"/>
+      <mj-class name="c0" color="#008853"/>
+      <mj-class name="bg0" background-color="#008853"/>
+      <mj-class name="c1" color="#00390D"/>
+      <mj-class name="bg1" background-color="#00390D"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -45,7 +45,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/TqgzjgC3/ecosup-Immobilier.png" alt="logo Ecosup Immobilier"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/xKH0YmJq/logosupveto.png" alt="logo Supveto Lille"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -56,13 +56,13 @@
     <mj-section padding="0" mj-class="bg0">
       <mj-group width="100%">
         <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiant"/>
+          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'Étudiants"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/pB6RBFP0/imo1.jpg" alt="Clé d'acquisition de la maison"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/ZzKZ0r8m/sup2.jpg" alt="Connaissance et soins des animaux compagnie"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/PvXWxt3P/jpo-Immo-Img21062025.jpg" alt="Négociation immobilière"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/PZC8ZtR3/jpo-Sup-Img21062025.jpg" alt="Connaissance et soins des NAC"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -71,27 +71,27 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px"> 
       <mj-column width="88%">
-        <mj-text padding="5px 10px" mj-class="T36-900 c0">Donnez un nouvel élan à votre avenir dans l'Immobilier&nbsp;!</mj-text>
+        <mj-text padding="5px 10px" mj-class="T36-900 c0">Donnez un nouvel élan à votre avenir dans la Santé animale&nbsp;!</mj-text>
         <mj-text padding="5px 10px" mj-class="T16-400 cT0"><span style="font-weight:700;color:#1a1a1a;">{{ contact.PRENOM }}</span>, vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? </mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT0">Découvrez un <span style="font-weight:700;color:#1a1a1a;">programme diplômant en alternance</span> qui vous permet de conjuguer apprentissage théorique et expérience professionnelle.</mj-text>
-        <mj-text padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0">Lors de cette journée, <span style="font-weight:700;color:#EC6608;">samedi 21 juin</span>, vous pourrez <span style="font-weight:700;color:#EC6608;">de 9h30 à 13h</span>&nbsp;:</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> Explorer un <span style="font-weight:700;color:#1a1a1a;">campus moderne</span>,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> Échanger avec des <span style="font-weight:700;color:#1a1a1a;">experts</span> et des <span style="font-weight:700;color:#1a1a1a;">étudiants</span>,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> Assister à des <span style="font-weight:700;color:#1a1a1a;">présentations détaillées</span> sur nos <span style="font-weight:700;color:#1a1a1a;">formations</span>, notamment en <span style="font-weight:700;color:#1a1a1a;">alternance</span>,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> Obtenir des réponses à vos questions sur les <span style="font-weight:700;color:#1a1a1a;">admissions</span> et la <span style="font-weight:700;color:#1a1a1a;">vie étudiante</span>,</mj-text>
-        <mj-text padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> Découvrir les nombreuses <span style="font-weight:700;color:#1a1a1a;">perspectives de carrière offertes par l'immobilier.</span></mj-text>
+        <mj-text padding="5px 10px" mj-class="T16-400 cT0">Découvrez un <span style="font-weight:700;color:#1a1a1a;">programme diplômant en formation initiale et en alternance</span>, conçu pour vous offrir un enseignement théorique approfondi et une immersion professionnelle enrichissante.</mj-text>
+        <mj-text padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0">Lors de cette journée, <span style="font-weight:700;color:#008853;">samedi 21 juin</span>, vous pourrez <span style="font-weight:700;color:#008853;">de 9h30 à 13h</span>&nbsp;:</mj-text>
+        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> Explorer un <span style="font-weight:700;color:#1a1a1a;">campus moderne</span>,</mj-text>
+        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> Échanger avec des <span style="font-weight:700;color:#1a1a1a;">experts</span> et des <span style="font-weight:700;color:#1a1a1a;">étudiants</span>,</mj-text>
+        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> Assister à des <span style="font-weight:700;color:#1a1a1a;">présentations détaillées</span> sur nos formations <span style="font-weight:700;color:#1a1a1a;">d'Auxiliaire spécialisé vétérinaire</span> (en initial) ou de  <span style="font-weight:700;color:#1a1a1a;">Bachelor Chargé(e) de gestion et management en structure animalière</span> (en apprentissage),</mj-text>
+        <mj-text padding="0px 10px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> Obtenir des réponses à vos questions sur les <span style="font-weight:700;color:#1a1a1a;">admissions</span> et la <span style="font-weight:700;color:#1a1a1a;">vie étudiante</span>,</mj-text>
+        <mj-text padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0"><span style="color:#008853;">&#x25CF;</span> Découvrir les nombreuses <span style="font-weight:700;color:#1a1a1a;">perspectives de carrière offertes par le secteur de la santé animale.</span> </mj-text>
         <mj-text padding="5px 10px" mj-class="T16-400 cT0">Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section mj-class="bgW" padding="0 30px 20px 20px">
       <mj-group>
         <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Clément Duhamel</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Julie Kokocinski</mj-text>
           <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Immobilier</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Supveto Lille</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg"></mj-image>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/8LHVn5mv/Julie21062025.jpg"></mj-image>
         </mj-column>
       </mj-group>
     </mj-section>
@@ -118,23 +118,42 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-commerce.fr/bts-professions-immobilieres/" target="_blank">www.ecosup-immobilier.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="http://supveto-lille.fr" target="_blank">www.supveto-lille.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/x8cRbcM9/icon-Immo062025.png" alt="icon clé de maison"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
+      </mj-column>
+      <mj-column width="80%">   
+        <mj-spacer height="20px"></mj-spacer>
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#008853;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">ASV</span> Auxiliaire spécialisé(e) vétérinaire</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">24 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="0">
+      <mj-column>
+        <mj-spacer height="10px"></mj-spacer>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="20px" background-color="#e6e6e6">
+      <mj-column width="20%">
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC6608;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Professions immobilières</mj-text>
-        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#008853">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de gestion et de management en structure animalière</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
