réaliser les balises alt des responsables pédagogiques du bloc headtext de l'ensemble des modules

--- a/src/includes/hotellerie/_headtext.pug
+++ b/src/includes/hotellerie/_headtext.pug
@@ -18,4 +18,4 @@ mj-section(mj-class="bgW" padding="0 30px 20px 20px")
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable des études
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Hôtellerie
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg" alt="Hélène Salmon, responsable des études hôtellerie")/
