--- a/src/includes/sm/_headtext.pug
+++ b/src/includes/sm/_headtext.pug
@@ -19,4 +19,4 @@ mj-section(mj-class="bgW" padding="0 30px 20px 20px")
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Secrétaire médical(e)
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Santé
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/LhZ52YdN/Sandrine21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/LhZ52YdN/Sandrine21062025.jpg" alt="Sandrine Coudron, responsable pédagogique secrétaire médical(e)")/
