--- a/src/includes/aepe/_headtext.pug
+++ b/src/includes/aepe/_headtext.pug
@@ -19,4 +19,4 @@ mj-section(mj-class="bgW" padding="0 30px 20px 20px")
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Petite Enfance
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Santé
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/qM5vq0xh/Jerome21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/qM5vq0xh/Jerome21062025.jpg" alt="Jérôme Poulain, responsable pédagogique de la petite enfance, en noir et blanc")/
