--- a/src/includes/assurance/_headtext.pug
+++ b/src/includes/assurance/_headtext.pug
@@ -18,4 +18,4 @@ mj-section(mj-class="bgW" padding="0 30px 20px 20px")
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable pédagogique
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Assurance
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/C3pq4YGT/Christian21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/C3pq4YGT/Christian21062025.jpg" alt="Christian Annaloro, responsable pédagogique assurance et banque")/
