--- a/src/includes/immobilier/_headtext.pug
+++ b/src/includes/immobilier/_headtext.pug
@@ -18,4 +18,4 @@ mj-section(mj-class="bgW" padding="0 30px 20px 20px")
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable pédagogique
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Immobilier
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique immobilier")/
