--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Assurance</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Commerce</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -16,7 +16,6 @@
     <mj-attributes>
       <mj-all font-family="Roboto, Arial, Helvetica,sans serif"/>
       <mj-class name="T36-900" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="900"/>
-      <mj-class name="T36-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="300"/>
       <mj-class name="T24-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="700"/>
       <mj-class name="T24-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="300"/>
       <mj-class name="T16-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="700"/>
@@ -25,16 +24,16 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #944694" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#944694"></mj-button>
+      <mj-button border="2px solid #EC6608" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#EC6608"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
       <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
       <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#944694"/>
-      <mj-class name="bg0" background-color="#944694"/>
-      <mj-class name="c1" color="#644092"/>
-      <mj-class name="bg1" background-color="#644092"/>
+      <mj-class name="c0" color="#EC6608"/>
+      <mj-class name="bg0" background-color="#EC6608"/>
+      <mj-class name="c1" color="#AA3E17"/>
+      <mj-class name="bg1" background-color="#AA3E17"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -46,7 +45,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/7r1nj2K/logo-EAssurance.png" alt="logo Ecosup Assurance"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/wrpwgdn/logo-ECommerce.png" alt="logo Ecosup Commerce"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -57,13 +56,13 @@
     <mj-section padding="0" mj-class="bg0">
       <mj-group width="100%">
         <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
+          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'Étudiants"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/6RdxJ0Mg/jpo-Ass1-Img21062025.jpg" alt="poignée de mains"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/WWRyG1S4/jpo-Com-Img21062025.jpg" alt="Les cartes bancaires, un levier pour le commerce"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/hFz6tFhv/jpo-Ass2-Img21062025.jpg" alt="Bureau de travail des assureurs"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/0yznBsFs/com2.jpg" alt="L'évolution des cours boursiers"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -73,14 +72,14 @@
     <mj-section background-color="#ffffff" padding="20px"> 
       <mj-column width="88%">
         <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px">Parcoursup ne vous a pas donné de réponse positive&nbsp;?</mj-text>
-        <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible.</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">l'assurance</span>.</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Vous vous intéressez à la finance, la gestion des risques ou la relation client&nbsp;? Venez découvrir nos formations en <span style="font-weight:700;color:#1a1a1a;">BTS Assurance</span>, <span style="font-weight:700;color:#1a1a1a;">Bachelor Assurance et Banque</span> et <span style="font-weight:700;color:#1a1a1a;">Mastère Assurance et Banque</span>, à l'occasion de notre <span style="font-weight:700;color:#1a1a1a;">dernière Journée Portes Ouvertes de l'année</span>.</mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT0"><img align="left" width="60px" src="" alt=""/>
-          <div style="font-weight:700;padding-left:70px;color:#644092;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
-          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;">Ecosup campus 17 rue des Ursulines - Tourcoing</div>
+        <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">le commerce opérationnel</span>.</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0">Vous vous intéressez aux commerces, à la gestion et l'optimation des ventes ou à la relation client&nbsp;? Venez découvrir nos formations en <span style="font-weight:700;color:#1a1a1a;">BTS MCO</span> (Management Commercial Opérationnel) et <span style="font-weight:700;color:#1a1a1a;">Bachelor RDC</span> (Responsable Développement Commercial), à l'occasion de notre <span style="font-weight:700;color:#1a1a1a;">dernière Journée Portes Ouvertes de l'année</span>.</mj-text>
+        <mj-text padding="5px 10px" mj-class="T16-400 cT0"> <img align="left" width="60px" src="" alt=""/>
+          <div style="font-weight:700;padding-left:70px;color:#1a1a1a;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
+          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400">Ecosup Campus 17 rue des Ursulines - Tourcoing</div>
         </mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier imporsonnel qui decide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. <span style="font-weight:700;color:#1a1a1a;">Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine</span>.</mj-text>
         <mj-text padding="10px" mj-class="T16-700 cT1">Rejoignez-nous et donnez un vrai cap à votre avenir.</mj-text>
       </mj-column>
@@ -88,12 +87,12 @@
     <mj-section mj-class="bgW" padding="0 30px 20px 20px">
       <mj-group>
         <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Christian Annaloro</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Marie-Laurence Wallaert</mj-text>
           <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Assurance</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Commerce</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/C3pq4YGT/Christian21062025.jpg" alt="Christian Annaloro, responsable pédagogique assurance et banque"/>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/BKdsWMZb/Marie-Laurence21062025.jpg" alt="Marie-Laurence Wallaert, responsable pédagogique commerce opérationnel"/>
         </mj-column>
       </mj-group>
     </mj-section>
@@ -120,17 +119,17 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-assurance.fr" target="_blank">www.ecosup-assurance.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-commerce.fr" target="_blank">www.ecosup-commerce.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/Tx52P1n0/icon-Com062025.png" alt="icon de cible avec flèche"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#944694;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Assurance</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC6608;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Management commercial opérationnel</mj-text>
         <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
@@ -146,42 +145,17 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/Tx52P1n0/icon-Com062025.png" alt="icon de cible avec flèche"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#944694;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de clientèles en assurance et banque</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC6608;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable en développement commercial</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : Programme élaboré en collaboration avec l' <span style="font-weight:700;color:#1a1a1a;">ESA</span>,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/TxdhvJgN/icon-Assu062025.png" alt="icon parapluie de protection"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#944694;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Expert(e) en ingénierie patrimoniale</mj-text>
-        <mj-text padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+3,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : Programme élaboré en collaboration avec l' <span style="font-weight:700;color:#1a1a1a;">ESA</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
