--- a/src/templates/_commerce.pug
+++ b/src/templates/_commerce.pug
@@ -15,6 +15,7 @@ mjml
         mj-attributes
             mj-all(font-family='Roboto, Arial, Helvetica,sans serif')/
             mj-class(name='T36-900' font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size='36px' line-height='36px' font-weight='900')/
+            mj-class(name='T36-300' font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size='36px' line-height='36px' font-weight='300')/
             mj-class(name='T24-700' font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size='24px' line-height='28px' font-weight='700')/
             mj-class(name='T24-300' font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size='24px' line-height='28px' font-weight='300')/
             mj-class(name='T16-700' font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size='16px' line-height='20px' font-weight='700')/
