--- a/src/includes/supveto/_headtext.pug
+++ b/src/includes/supveto/_headtext.pug
@@ -3,8 +3,7 @@ mj-section(background-color="#ffffff" padding="20px")
     mj-column(width="88%")
         mj-text(padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px") #[span(style="font-weight:900;") Parcoursup] ne vous a pas donné de réponse positive&nbsp;!
         mj-text(padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px") Rassurez-vous, tout est encore possible
-        mj-text(padding="10px" mj-class="T16-400 cT0")
-        mj-text(padding="10px" padding-bottom="0" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") la santé animale]. 
+        mj-text(padding="10px" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") la santé animale]. 
         mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Vous vous intéressez aux soins vétérinaires, au bien-être animal, à l'accompagnement des animaux ou à l'exercice d'un métier au sein d'une clinique&nbsp;? Venez découvrir nos formations
         mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") ASV], Auxiliaire Spécialisé Vétérinaire
         mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de Gestion et Management en Structure Animalière
