--- a/src/includes/assurance/_headtext.pug
+++ b/src/includes/assurance/_headtext.pug
@@ -1,14 +1,18 @@
 //-Header Assurance Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
-        mj-text(padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px") Parcoursup ne vous a pas donné de réponse positive&nbsp;?
+        mj-text(padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px") #[span(style="font-weight:900") Parcoursup] ne vous a pas donné de réponse positive&nbsp;?
         mj-text(padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px") Rassurez-vous, tout est encore possible.
         mj-text(padding="10px" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") l'assurance].
-        mj-text(padding="10px" mj-class="T16-400 cT0") Vous vous intéressez à la finance, la gestion des risques ou la relation client&nbsp;? Venez découvrir nos formations en #[span(style="font-weight:700;color:#1a1a1a;") BTS Assurance], #[span(style="font-weight:700;color:#1a1a1a;") Bachelor Assurance et Banque] et #[span(style="font-weight:700;color:#1a1a1a;") Mastère Assurance et Banque], à l'occasion de notre #[span(style="font-weight:700;color:#1a1a1a;") dernière Journée Portes Ouvertes de l'année].
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0")
+        mj-text(padding="10px" padding-bottom="0" mj-class="T16-400 cT0") Vous vous intéressez à la finance, la gestion des risques ou la relation client&nbsp;? Venez découvrir nos formations 
+        mj-text(padding="0 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#644092;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") BTS] Assurance, 
+        mj-text(padding="0 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#644092;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de clientèles en assurance et banque
+        mj-text(padding="0 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#644092;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") Mastère] Expert(e) en ingénierie patrimoniale
+        mj-text(padding="10px" padding-top="0px" mj-class="T16-400 cT0") à l'occasion de notre dernière #[span(style="font-weight:700;color:#1a1a1a;") Journée Portes Ouvertes] de l'année.
+        mj-text(padding="5px 10px" mj-class="T16-400 cT1")
             img(align="left" width="60px" src="" alt="")/
             div(style="font-weight:700;padding-left:70px;color:#644092;") Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h
-            div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") Ecosup campus 17 rue des Ursulines - Tourcoing
+            div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") #[strong Ecosup campus] 17 rue des Ursulines - Tourcoing
         mj-text(padding="10px" mj-class="T16-400 cT0") Chez #[span(style="font-weight:700;color:#1a1a1a;") Ecosup Campus], nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, #[span(style="font-weight:700;color:#1a1a1a;") ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir], mais un vrai dialogue, humain et bienveillant, avec chaque candidat.
         mj-text(padding="10px" mj-class="T16-400 cT0") Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. #[span(style="font-weight:700;color:#1a1a1a;") Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine].
         mj-text(padding="10px" mj-class="T16-700 cT1") Rejoignez-nous et donnez un vrai cap à votre avenir.
