--- a/src/includes/supveto/_headtext.pug
+++ b/src/includes/supveto/_headtext.pug
@@ -7,8 +7,8 @@ mj-section(background-color="#ffffff" padding="20px")
         mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Vous vous intéressez aux soins vétérinaires, au bien-être animal, à l'accompagnement des animaux ou à l'exercice d'un métier au sein d'une clinique&nbsp;? Venez découvrir nos formations
         mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") ASV], Auxiliaire Spécialisé Vétérinaire
         mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#008853;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") Bachelor] Chargé(e) de Gestion et Management en Structure Animalière
-        mj-text(padding="10px" padding-top="0" mj-class="T16-400 cT0") à l'occasion de notre #[span(style="font-weight:700;color:#1a1a1a;") dernière Journée Portes Ouvertes de l'année]. 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0")
+        mj-text(padding="10px" padding-top="0" mj-class="T16-400 cT0") à l'occasion de notre dernière #[span(style="font-weight:700;color:#1a1a1a;") Journée Portes Ouvertes] de l'année.
+        mj-text(padding="5px 10px" mj-class="T16-400 cT1")
             img(align="left" width="60px" src="" alt="")/
             div(style="font-weight:700;padding-left:70px;color:#008853;") Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h
             div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") #[strong Ecosup Campus] 17 rue des Ursulines - Tourcoing
